# ProcessCalcRuntime

./: Cargo.toml  DesignAndMotivation.md  README.md
module/: Cargo.toml
module/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  pcalc.rs  types.json
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
