[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[workspace]
members = ['runtime']

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.pcalc-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '13fc71c681cc9a3cc911c32c7890b52885092969'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'pcalc'
version = '2.0.0'

[[bin]]
name = 'pcalc'
path = 'src/main.rs'
