[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[workspace]
members = ['runtime', 'module']

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '1.18'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.pcalc-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[package]
authors = ['Joshy Orndorff']
build = 'build.rs'
edition = '2018'
name = 'pcalc'
version = '2.0.0'

[[bin]]
name = 'pcalc'
path = 'src/main.rs'
