[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'pcalc-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.pcalc-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['pcalc-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
